updated the demo

--- a/demo_pipeline.ipynb
+++ b/demo_pipeline.ipynb
@@ -87,12 +87,12 @@
       "cell_type": "code",
       "execution_count": 170,
       "metadata": {
-        "id": "vJJRscHuSbDo",
-        "outputId": "d1ce1500-95bb-4fbd-8cb3-8faaef0271a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 217
-        }
+        },
+        "id": "vJJRscHuSbDo",
+        "outputId": "d1ce1500-95bb-4fbd-8cb3-8faaef0271a9"
       },
       "outputs": [
         {
@@ -127,12 +127,12 @@
       "cell_type": "code",
       "execution_count": 177,
       "metadata": {
-        "id": "iqXkc6MASbDo",
-        "outputId": "ba3e3af7-501d-477c-df35-aa16e0a3770d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 98
-        }
+        },
+        "id": "iqXkc6MASbDo",
+        "outputId": "ba3e3af7-501d-477c-df35-aa16e0a3770d"
       },
       "outputs": [
         {
@@ -289,11 +289,11 @@
       "cell_type": "code",
       "execution_count": 178,
       "metadata": {
-        "id": "mot_bxAMSbDp",
-        "outputId": "0f2b3252-3897-4c0a-a046-6176e01802d9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mot_bxAMSbDp",
+        "outputId": "0f2b3252-3897-4c0a-a046-6176e01802d9"
       },
       "outputs": [
         {
@@ -324,12 +324,12 @@
       "cell_type": "code",
       "execution_count": 179,
       "metadata": {
-        "id": "Ug3189vwSbDq",
-        "outputId": "b7991564-bacf-4d57-9596-8273a87c36c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 98
-        }
+        },
+        "id": "Ug3189vwSbDq",
+        "outputId": "b7991564-bacf-4d57-9596-8273a87c36c8"
       },
       "outputs": [
         {
@@ -511,12 +511,12 @@
       "cell_type": "code",
       "execution_count": 181,
       "metadata": {
-        "id": "reVT0vgWSbDr",
-        "outputId": "47fad83c-3479-42c3-f4cf-495844e49a05",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 150
-        }
+        },
+        "id": "reVT0vgWSbDr",
+        "outputId": "47fad83c-3479-42c3-f4cf-495844e49a05"
       },
       "outputs": [
         {
@@ -726,11 +726,11 @@
         "!python pipeline/3_MDETR_inference.py --input_file demo/2_preprocessing.pkl --output_file temp.pkl --expression_column caption_preprocessed --inference_column MDETR_caption --image_directory demo/img "
       ],
       "metadata": {
-        "id": "RH0-sJeSUqYA",
-        "outputId": "d40d6f31-4863-4779-f90b-fe2d7abd6648",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RH0-sJeSUqYA",
+        "outputId": "d40d6f31-4863-4779-f90b-fe2d7abd6648"
       },
       "execution_count": 183,
       "outputs": [
@@ -753,11 +753,11 @@
         "!python pipeline/3_MDETR_inference.py --input_file temp.pkl --output_file temp.pkl --expression_column title_en_preprocessed --inference_column MDETR_title --image_directory demo/img "
       ],
       "metadata": {
-        "id": "1hvJ_BFqVFm5",
-        "outputId": "ff3cfb1d-1b69-4c4c-d156-61360ea9be53",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1hvJ_BFqVFm5",
+        "outputId": "ff3cfb1d-1b69-4c4c-d156-61360ea9be53"
       },
       "execution_count": 184,
       "outputs": [
@@ -789,11 +789,11 @@
         "pd.read_pickle('temp.pkl').loc[0,['MDETR_caption', 'MDETR_title']].apply(lambda x: (f'conf: {x[0]}, labels: {x[2]}, bbox: {x[1]}'))"
       ],
       "metadata": {
-        "id": "2KMWN4d9lNcZ",
-        "outputId": "15148429-7e82-4183-cc4c-761862e7ba15",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2KMWN4d9lNcZ",
+        "outputId": "15148429-7e82-4183-cc4c-761862e7ba15"
       },
       "execution_count": 197,
       "outputs": [
@@ -868,11 +868,11 @@
         "!wget https://penzhanwu2bbs.blob.core.windows.net/data/GLIPv1_Open/models/glip_large_model.pth "
       ],
       "metadata": {
-        "id": "KMALC-ycVIBC",
-        "outputId": "482540fa-0d0b-42ab-8c86-150f5d18b4f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KMALC-ycVIBC",
+        "outputId": "482540fa-0d0b-42ab-8c86-150f5d18b4f8"
       },
       "execution_count": 19,
       "outputs": [
@@ -923,12 +923,12 @@
         "pd.read_pickle('demo/3_phrase_grounding.pkl')[['MDETR_caption', 'MDETR_title', 'GLIP_caption', 'GLIP_title']]"
       ],
       "metadata": {
-        "id": "WWn-qOl2kaMM",
-        "outputId": "e3794a9b-6792-41ff-b23b-9aa471515589",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81
-        }
+        },
+        "id": "WWn-qOl2kaMM",
+        "outputId": "e3794a9b-6792-41ff-b23b-9aa471515589"
       },
       "execution_count": 200,
       "outputs": [
@@ -1211,11 +1211,11 @@
         "print(f'MDETR-caption: {len(results[\"MDETR_caption\"][0])}, MDETR-title: {len(results[\"MDETR_title\"][0])}, GLIP-caption: {len(results[\"GLIP_caption\"][0])}, GLIP-title: {len(results[\"GLIP_title\"][0])}')"
       ],
       "metadata": {
-        "id": "M3xAbObTor-W",
-        "outputId": "3bc41719-24b7-4930-ef28-5ec6d9e9c0d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "M3xAbObTor-W",
+        "outputId": "3bc41719-24b7-4930-ef28-5ec6d9e9c0d4"
       },
       "execution_count": 202,
       "outputs": [
@@ -1234,11 +1234,11 @@
         "!python pipeline/4_apply_nms.py --input_file demo/3_phrase_grounding.pkl --output_file demo/4_postprocess.pkl --columns_to_process GLIP_caption GLIP_title MDETR_caption MDETR_title"
       ],
       "metadata": {
-        "id": "q1Br92t7oXFW",
-        "outputId": "ee5d5203-5bb6-45ed-99d9-a4f66b0369d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "q1Br92t7oXFW",
+        "outputId": "ee5d5203-5bb6-45ed-99d9-a4f66b0369d5"
       },
       "execution_count": 203,
       "outputs": [
@@ -1261,11 +1261,11 @@
         "print(f'MDETR-caption: {len(post_nms[\"MDETR_caption\"][0])}, MDETR-title: {len(post_nms[\"MDETR_title\"][0])}, GLIP-caption: {len(post_nms[\"GLIP_caption\"][0])}, GLIP-title: {len(post_nms[\"GLIP_title\"][0])}')"
       ],
       "metadata": {
-        "id": "dKKh_D1goJEi",
-        "outputId": "68a3c3e1-3636-40c9-c912-a410e9e7a157",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dKKh_D1goJEi",
+        "outputId": "68a3c3e1-3636-40c9-c912-a410e9e7a157"
       },
       "execution_count": 204,
       "outputs": [
@@ -1296,12 +1296,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "g2QZDq9BrL46",
-        "outputId": "fd38b062-baa0-4d2a-cd36-94f05526418b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 685
-        }
+        },
+        "id": "g2QZDq9BrL46",
+        "outputId": "fd38b062-baa0-4d2a-cd36-94f05526418b"
       },
       "execution_count": 220,
       "outputs": [
@@ -1337,15 +1337,15 @@
       "cell_type": "code",
       "source": [
         "postprocess['selection'] = 'MDETR_caption'\n",
-        "postprocess.to_pickle('demo/selection.pkl')\n",
+        "postprocess.to_pickle('demo/5_selection.pkl')\n",
         "postprocess.iloc[0]"
       ],
       "metadata": {
-        "id": "Z09Wu96g81oZ",
-        "outputId": "b7e9c6b8-43b0-4c02-eb01-6b1ef2649760",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Z09Wu96g81oZ",
+        "outputId": "b7e9c6b8-43b0-4c02-eb01-6b1ef2649760"
       },
       "execution_count": 222,
       "outputs": [
@@ -1397,11 +1397,11 @@
         "!gdown 1OWH7arM-qllbCJwqkMVy9NKWHB398iol"
       ],
       "metadata": {
-        "id": "x4okDYvI_afN",
-        "outputId": "5535f590-ae35-4b5e-cfab-3c49a12385e0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "x4okDYvI_afN",
+        "outputId": "5535f590-ae35-4b5e-cfab-3c49a12385e0"
       },
       "execution_count": 228,
       "outputs": [
@@ -1440,14 +1440,14 @@
     {
       "cell_type": "code",
       "source": [
-        "!python pipeline/6_segmentation.py --input_file demo/selection.pkl --output_dir demo/results --image_dir demo/img --selection_column selection --save_fig --save_segmentation_pickle --model_path model_segmentation.pth --save_colored_text_array --save_colored_text_html --device cuda"
+        "!python pipeline/6_segmentation.py --input_file demo/5_selection.pkl --output_dir demo/7_segmentation_results --image_dir demo/img --selection_column selection --save_fig --save_segmentation_pickle --model_path model_segmentation.pth --save_colored_text_array --save_colored_text_html --device cuda"
       ],
       "metadata": {
-        "id": "TlDigcLH308c",
-        "outputId": "fe8a1749-7a50-4dee-d4e5-9d49edb8477f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TlDigcLH308c",
+        "outputId": "fe8a1749-7a50-4dee-d4e5-9d49edb8477f"
       },
       "execution_count": 232,
       "outputs": [
@@ -1478,11 +1478,11 @@
         "post_segmentation.iloc[0]"
       ],
       "metadata": {
-        "id": "HtzigJvuASmK",
-        "outputId": "e6637d25-09cd-4d2f-c01b-aafac68c643f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HtzigJvuASmK",
+        "outputId": "e6637d25-09cd-4d2f-c01b-aafac68c643f"
       },
       "execution_count": 261,
       "outputs": [
@@ -1526,12 +1526,12 @@
         "IPython.display.HTML(f'<h3 align=\"center\">{html_text}</h3>' + f'<p style=\"text-align:center;\"><img align=\"center\" src={img} alt=\"\" width=\"600\" height=\"400\">')\n"
       ],
       "metadata": {
-        "id": "yzScT4QQ_7jP",
-        "outputId": "0085e3a8-3435-4988-86eb-d82d4b6ecf51",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 466
-        }
+        },
+        "id": "yzScT4QQ_7jP",
+        "outputId": "0085e3a8-3435-4988-86eb-d82d4b6ecf51"
       },
       "execution_count": 259,
       "outputs": [
