--- a/demo_pipeline.ipynb
+++ b/demo_pipeline.ipynb
@@ -696,7 +696,7 @@
         "\n",
         "We will store the intermediate results in a temporary DataFrame\n",
         "\n",
-        "> As this take some time, and requires many new dependencies, it is possible to skip this part in the demo and use the provided dataframe post-phrase grounding. If so, directly go [here](https://colab.research.google.com/github/tgieruc/Heritage-in-the-digital-age/blob/main/demo_pipeline.ipynb#scrollTo=RL4KjesN0AXm&line=8&uniqifier=1=)  "
+        "> As this take some time, and requires many new dependencies, it is possible to skip this part in the demo and use the provided dataframe post-phrase grounding. If so, directly go [to the Visualization](#scrollTo=8o8xnyUez-D0&line=2&uniqifier=1)\n"
       ]
     },
     {
@@ -817,7 +817,7 @@
         "### GLIP \n",
         "GLIP is a bit more complex to get working. It needs a specific version of CUDA, several dependencies and a huge weight file. It can take up to 20 minutes. \n",
         "\n",
-        "> If you do not want to wait this long, you can directly go to the visualization of results [here](https://colab.research.google.com/github/tgieruc/Heritage-in-the-digital-age/blob/main/demo_pipeline.ipynb#scrollTo=RL4KjesN0AXm&line=8&uniqifier=1=)"
+        "> If you do not want to wait this long, you can directly go to the visualization of results [here](#scrollTo=8o8xnyUez-D0&line=2&uniqifier=1)"
       ],
       "metadata": {
         "id": "-mwxFovoghgt"
@@ -1073,7 +1073,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        " ### Let's visualize the resuls!\n",
+        " ### Let's visualize the resuls! \n",
+        " <a id='visualization'></a>\n",
         " Some helper functions"
       ],
       "metadata": {
