--- a/WebUI_colab.ipynb
+++ b/WebUI_colab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM4in9kJA3uDT1PpACK2vQB",
+      "authorship_tag": "ABX9TyMBCtDViKbuNPUplQJ1ueh/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,10 +71,57 @@
         "cats.zip/\n",
         "├── cat_1.png\n",
         "└── cat_2.png\n",
-        "```"
+        "```\n",
+        "\n",
+        "\n",
+        "An example dataframe and zip file can be created with this script:"
       ],
       "metadata": {
         "id": "zMPCVOA99D9c"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import files\n",
+        "import pandas as pd \n",
+        "\n",
+        "# Create a list of tuples with image_id and caption\n",
+        "data = [('cat_1', 'cats eating food in the street', 'Des chats à la rue Augustin, Fribourg'),\n",
+        "        ('cat_2', 'a cat on a laptop', 'Un chat blanc regardant Wikipedia')]\n",
+        "# Create a pandas DataFrame with the data and column names\n",
+        "df = pd.DataFrame(data, columns=['image_id', 'caption', 'title'])\n",
+        "df.to_pickle('df.pkl')\n",
+        "\n",
+        "files.download('df.pkl')"
+      ],
+      "metadata": {
+        "id": "1MVuuOQbkTLz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget -q https://upload.wikimedia.org/wikipedia/commons/thumb/9/94/Street_cats_%281%29.jpg/640px-Street_cats_%281%29.jpg -O cat_1.jpg\n",
+        "!wget -q https://upload.wikimedia.org/wikipedia/commons/a/aa/White_cat_watching_Wikipedia.jpg -O cat_2.jpg\n",
+        "!zip -q imgs.zip cat_1.jpg cat_2.jpg\n",
+        "files.download('imgs.zip')"
+      ],
+      "metadata": {
+        "id": "-9t-AsTEqHXN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "⚠ You might need to autorise your browser to download several files ⚠"
+      ],
+      "metadata": {
+        "id": "CdO4zcA5zn90"
       }
     },
     {
@@ -117,6 +164,15 @@
       ],
       "metadata": {
         "id": "75rx5h1o5anf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xRejm5qFz9BR"
       },
       "execution_count": null,
       "outputs": []
